docs/4.22/rest_api/config_apis/dns-config-openshift-io-v1.md
Description
DNS holds cluster-wide information about DNS. The canonical name is `cluster`

Compatibility level 1: Stable within a major release for a minimum of 12 months or 3 minor releases (whichever is longer).

Type
`object`

Required
- `spec`

# Specification

| Property     | Type                                                                                 | Description                                                                                                                                                                                                                                                                                          |
|--------------|--------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `apiVersion` | `string`                                                                             | APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: <https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources>  |
| `kind`       | `string`                                                                             | Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: <https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds> |
| `metadata`   | [`ObjectMeta`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-ObjectMeta) | Standard object’s metadata. More info: <https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#metadata>                                                                                                                                                                |
| `spec`       | `object`                                                                             | spec holds user settable values for configuration                                                                                                                                                                                                                                                    |
| `status`     | `object`                                                                             | status holds observed values from the cluster. They may not be overridden.                                                                                                                                                                                                                           |

## .spec

Description
spec holds user settable values for configuration

Type
`object`

<table>
<colgroup>
<col style="width: 33%" />
<col style="width: 33%" />
<col style="width: 33%" />
</colgroup>
<thead>
<tr class="header">
<th style="text-align: left;">Property</th>
<th style="text-align: left;">Type</th>
<th style="text-align: left;">Description</th>
</tr>
</thead>
<tbody>
<tr class="odd">
<td style="text-align: left;"><p><code>baseDomain</code></p></td>
<td style="text-align: left;"><p><code>string</code></p></td>
<td style="text-align: left;"><p>baseDomain is the base domain of the cluster. All managed DNS records will be sub-domains of this base.</p>
<p>For example, given the base domain <code>openshift.example.com</code>, an API server DNS record may be created for <code>cluster-api.openshift.example.com</code>.</p>
<p>Once set, this field cannot be changed.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>platform</code></p></td>
<td style="text-align: left;"><p><code>object</code></p></td>
<td style="text-align: left;"><p>platform holds configuration specific to the underlying infrastructure provider for DNS. When omitted, this means the user has no opinion and the platform is left to choose reasonable defaults. These defaults are subject to change over time.</p></td>
</tr>
<tr class="odd">
<td style="text-align: left;"><p><code>privateZone</code></p></td>
<td style="text-align: left;"><p><code>object</code></p></td>
<td style="text-align: left;"><p>privateZone is the location where all the DNS records that are only available internally to the cluster exist.</p>
<p>If this field is nil, no private records should be created.</p>
<p>Once set, this field cannot be changed.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>publicZone</code></p></td>
<td style="text-align: left;"><p><code>object</code></p></td>
<td style="text-align: left;"><p>publicZone is the location where all the DNS records that are publicly accessible to the internet exist.</p>
<p>If this field is nil, no public records should be created.</p>
<p>Once set, this field cannot be changed.</p></td>
</tr>
</tbody>
</table>

## .spec.platform

Description
platform holds configuration specific to the underlying infrastructure provider for DNS. When omitted, this means the user has no opinion and the platform is left to choose reasonable defaults. These defaults are subject to change over time.

Type
`object`

Required
- `type`

<table>
<colgroup>
<col style="width: 33%" />
<col style="width: 33%" />
<col style="width: 33%" />
</colgroup>
<thead>
<tr class="header">
<th style="text-align: left;">Property</th>
<th style="text-align: left;">Type</th>
<th style="text-align: left;">Description</th>
</tr>
</thead>
<tbody>
<tr class="odd">
<td style="text-align: left;"><p><code>aws</code></p></td>
<td style="text-align: left;"><p><code>object</code></p></td>
<td style="text-align: left;"><p>aws contains DNS configuration specific to the Amazon Web Services cloud provider.</p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>type</code></p></td>
<td style="text-align: left;"><p><code>string</code></p></td>
<td style="text-align: left;"><p>type is the underlying infrastructure provider for the cluster. Allowed values: "", "AWS".</p>
<p>Individual components may not support all platforms, and must handle unrecognized platforms with best-effort defaults.</p></td>
</tr>
</tbody>
</table>

## .spec.platform.aws

Description
aws contains DNS configuration specific to the Amazon Web Services cloud provider.

Type
`object`

<table>
<colgroup>
<col style="width: 33%" />
<col style="width: 33%" />
<col style="width: 33%" />
</colgroup>
<thead>
<tr class="header">
<th style="text-align: left;">Property</th>
<th style="text-align: left;">Type</th>
<th style="text-align: left;">Description</th>
</tr>
</thead>
<tbody>
<tr class="odd">
<td style="text-align: left;"><p><code>privateZoneIAMRole</code></p></td>
<td style="text-align: left;"><p><code>string</code></p></td>
<td style="text-align: left;"><p>privateZoneIAMRole contains the ARN of an IAM role that should be assumed when performing operations on the cluster’s private hosted zone specified in the cluster DNS config. When left empty, no role should be assumed.</p>
<p>The ARN must follow the format: arn:&lt;partition&gt;:iam::&lt;account-id&gt;:role/&lt;role-name&gt;, where: &lt;partition&gt; is the AWS partition (aws, aws-cn, aws-us-gov, or aws-eusc), &lt;account-id&gt; is a 12-digit numeric identifier for the AWS account, &lt;role-name&gt; is the IAM role name.</p></td>
</tr>
</tbody>
</table>

## .spec.privateZone

Description
privateZone is the location where all the DNS records that are only available internally to the cluster exist.

If this field is nil, no private records should be created.

Once set, this field cannot be changed.

Type
`object`

<table>
<colgroup>
<col style="width: 33%" />
<col style="width: 33%" />
<col style="width: 33%" />
</colgroup>
<thead>
<tr class="header">
<th style="text-align: left;">Property</th>
<th style="text-align: left;">Type</th>
<th style="text-align: left;">Description</th>
</tr>
</thead>
<tbody>
<tr class="odd">
<td style="text-align: left;"><p><code>id</code></p></td>
<td style="text-align: left;"><p><code>string</code></p></td>
<td style="text-align: left;"><p>id is the identifier that can be used to find the DNS hosted zone.</p>
<p>on AWS zone can be fetched using <code>ID</code> as id in [1] on Azure zone can be fetched using <code>ID</code> as a pre-determined name in [2], on GCP zone can be fetched using <code>ID</code> as a pre-determined name in [3].</p>
<p>[1]: <a href="https://docs.aws.amazon.com/cli/latest/reference/route53/get-hosted-zone.html#options">https://docs.aws.amazon.com/cli/latest/reference/route53/get-hosted-zone.html#options</a> [2]: <a href="https://docs.microsoft.com/en-us/cli/azure/network/dns/zone?view=azure-cli-latest#az-network-dns-zone-show">https://docs.microsoft.com/en-us/cli/azure/network/dns/zone?view=azure-cli-latest#az-network-dns-zone-show</a> [3]: <a href="https://cloud.google.com/dns/docs/reference/v1/managedZones/get">https://cloud.google.com/dns/docs/reference/v1/managedZones/get</a></p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>tags</code></p></td>
<td style="text-align: left;"><p><code>object (string)</code></p></td>
<td style="text-align: left;"><p>tags can be used to query the DNS hosted zone.</p>
<p>on AWS, resourcegroupstaggingapi [1] can be used to fetch a zone using <code>Tags</code> as tag-filters,</p>
<p>[1]: <a href="https://docs.aws.amazon.com/cli/latest/reference/resourcegroupstaggingapi/get-resources.html#options">https://docs.aws.amazon.com/cli/latest/reference/resourcegroupstaggingapi/get-resources.html#options</a></p></td>
</tr>
</tbody>
</table>

## .spec.publicZone

Description
publicZone is the location where all the DNS records that are publicly accessible to the internet exist.

If this field is nil, no public records should be created.

Once set, this field cannot be changed.

Type
`object`

<table>
<colgroup>
<col style="width: 33%" />
<col style="width: 33%" />
<col style="width: 33%" />
</colgroup>
<thead>
<tr class="header">
<th style="text-align: left;">Property</th>
<th style="text-align: left;">Type</th>
<th style="text-align: left;">Description</th>
</tr>
</thead>
<tbody>
<tr class="odd">
<td style="text-align: left;"><p><code>id</code></p></td>
<td style="text-align: left;"><p><code>string</code></p></td>
<td style="text-align: left;"><p>id is the identifier that can be used to find the DNS hosted zone.</p>
<p>on AWS zone can be fetched using <code>ID</code> as id in [1] on Azure zone can be fetched using <code>ID</code> as a pre-determined name in [2], on GCP zone can be fetched using <code>ID</code> as a pre-determined name in [3].</p>
<p>[1]: <a href="https://docs.aws.amazon.com/cli/latest/reference/route53/get-hosted-zone.html#options">https://docs.aws.amazon.com/cli/latest/reference/route53/get-hosted-zone.html#options</a> [2]: <a href="https://docs.microsoft.com/en-us/cli/azure/network/dns/zone?view=azure-cli-latest#az-network-dns-zone-show">https://docs.microsoft.com/en-us/cli/azure/network/dns/zone?view=azure-cli-latest#az-network-dns-zone-show</a> [3]: <a href="https://cloud.google.com/dns/docs/reference/v1/managedZones/get">https://cloud.google.com/dns/docs/reference/v1/managedZones/get</a></p></td>
</tr>
<tr class="even">
<td style="text-align: left;"><p><code>tags</code></p></td>
<td style="text-align: left;"><p><code>object (string)</code></p></td>
<td style="text-align: left;"><p>tags can be used to query the DNS hosted zone.</p>
<p>on AWS, resourcegroupstaggingapi [1] can be used to fetch a zone using <code>Tags</code> as tag-filters,</p>
<p>[1]: <a href="https://docs.aws.amazon.com/cli/latest/reference/resourcegroupstaggingapi/get-resources.html#options">https://docs.aws.amazon.com/cli/latest/reference/resourcegroupstaggingapi/get-resources.html#options</a></p></td>
</tr>
</tbody>
</table>

## .status

Description
status holds observed values from the cluster. They may not be overridden.

Type
`object`

# API endpoints

The following API endpoints are available:

- `/apis/config.openshift.io/v1/dnses`

  - `DELETE`: delete collection of DNS

  - `GET`: list objects of kind DNS

  - `POST`: create a DNS

- `/apis/config.openshift.io/v1/dnses/{name}`

  - `DELETE`: delete a DNS

  - `GET`: read the specified DNS

  - `PATCH`: partially update the specified DNS

  - `PUT`: replace the specified DNS

- `/apis/config.openshift.io/v1/dnses/{name}/status`

  - `GET`: read status of the specified DNS

  - `PATCH`: partially update status of the specified DNS

  - `PUT`: replace status of the specified DNS

## /apis/config.openshift.io/v1/dnses

HTTP method
`DELETE`

Description
delete collection of DNS

| HTTP code          | Reponse body                                                                        |
|--------------------|-------------------------------------------------------------------------------------|
| 200 - OK           | [`Status`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-Status) schema |
| 401 - Unauthorized | Empty                                                                               |

HTTP responses

HTTP method
`GET`

Description
list objects of kind DNS

| HTTP code          | Reponse body                                                            |
|--------------------|-------------------------------------------------------------------------|
| 200 - OK           | [`DNSList`](../objects/index.xml#io-openshift-config-v1-DNSList) schema |
| 401 - Unauthorized | Empty                                                                   |

HTTP responses

HTTP method
`POST`

Description
create a DNS

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| Parameter | Type                                                                                     | Description |
|-----------|------------------------------------------------------------------------------------------|-------------|
| `body`    | [`DNS`](../config_apis/dns-config-openshift-io-v1.xml#dns-config-openshift-io-v1) schema |             |

Body parameters

| HTTP code          | Reponse body                                                                             |
|--------------------|------------------------------------------------------------------------------------------|
| 200 - OK           | [`DNS`](../config_apis/dns-config-openshift-io-v1.xml#dns-config-openshift-io-v1) schema |
| 201 - Created      | [`DNS`](../config_apis/dns-config-openshift-io-v1.xml#dns-config-openshift-io-v1) schema |
| 202 - Accepted     | [`DNS`](../config_apis/dns-config-openshift-io-v1.xml#dns-config-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                    |

HTTP responses

## /apis/config.openshift.io/v1/dnses/{name}

| Parameter | Type     | Description     |
|-----------|----------|-----------------|
| `name`    | `string` | name of the DNS |

Global path parameters

HTTP method
`DELETE`

Description
delete a DNS

| Parameter | Type     | Description                                                                                                                                                                                                                                              |
|-----------|----------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`  | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed |

Query parameters

| HTTP code          | Reponse body                                                                        |
|--------------------|-------------------------------------------------------------------------------------|
| 200 - OK           | [`Status`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-Status) schema |
| 202 - Accepted     | [`Status`](../objects/index.xml#io-k8s-apimachinery-pkg-apis-meta-v1-Status) schema |
| 401 - Unauthorized | Empty                                                                               |

HTTP responses

HTTP method
`GET`

Description
read the specified DNS

| HTTP code          | Reponse body                                                                             |
|--------------------|------------------------------------------------------------------------------------------|
| 200 - OK           | [`DNS`](../config_apis/dns-config-openshift-io-v1.xml#dns-config-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                    |

HTTP responses

HTTP method
`PATCH`

Description
partially update the specified DNS

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| HTTP code          | Reponse body                                                                             |
|--------------------|------------------------------------------------------------------------------------------|
| 200 - OK           | [`DNS`](../config_apis/dns-config-openshift-io-v1.xml#dns-config-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                    |

HTTP responses

HTTP method
`PUT`

Description
replace the specified DNS

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| Parameter | Type                                                                                     | Description |
|-----------|------------------------------------------------------------------------------------------|-------------|
| `body`    | [`DNS`](../config_apis/dns-config-openshift-io-v1.xml#dns-config-openshift-io-v1) schema |             |

Body parameters

| HTTP code          | Reponse body                                                                             |
|--------------------|------------------------------------------------------------------------------------------|
| 200 - OK           | [`DNS`](../config_apis/dns-config-openshift-io-v1.xml#dns-config-openshift-io-v1) schema |
| 201 - Created      | [`DNS`](../config_apis/dns-config-openshift-io-v1.xml#dns-config-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                    |

HTTP responses

## /apis/config.openshift.io/v1/dnses/{name}/status

| Parameter | Type     | Description     |
|-----------|----------|-----------------|
| `name`    | `string` | name of the DNS |

Global path parameters

HTTP method
`GET`

Description
read status of the specified DNS

| HTTP code          | Reponse body                                                                             |
|--------------------|------------------------------------------------------------------------------------------|
| 200 - OK           | [`DNS`](../config_apis/dns-config-openshift-io-v1.xml#dns-config-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                    |

HTTP responses

HTTP method
`PATCH`

Description
partially update status of the specified DNS

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| HTTP code          | Reponse body                                                                             |
|--------------------|------------------------------------------------------------------------------------------|
| 200 - OK           | [`DNS`](../config_apis/dns-config-openshift-io-v1.xml#dns-config-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                    |

HTTP responses

HTTP method
`PUT`

Description
replace status of the specified DNS

| Parameter         | Type     | Description                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   |
|-------------------|----------|-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| `dryRun`          | `string` | When present, indicates that modifications should not be persisted. An invalid or unrecognized dryRun directive will result in an error response and no further processing of the request. Valid values are: - All: all dry run stages will be processed                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      |
| `fieldValidation` | `string` | fieldValidation instructs the server on how to handle objects in the request (POST/PUT/PATCH) containing unknown or duplicate fields. Valid values are: - Ignore: This will ignore any unknown fields that are silently dropped from the object, and will ignore all but the last duplicate field that the decoder encounters. This is the default behavior prior to v1.23. - Warn: This will send a warning via the standard warning response header for each unknown field that is dropped from the object, and for each duplicate field that is encountered. The request will still succeed if there are no other errors, and will only persist the last of any duplicate fields. This is the default in v1.23+ - Strict: This will fail the request with a BadRequest error if any unknown fields would be dropped from the object, or if any duplicate fields are present. The error returned from the server will contain all unknown and duplicate fields encountered. |

Query parameters

| Parameter | Type                                                                                     | Description |
|-----------|------------------------------------------------------------------------------------------|-------------|
| `body`    | [`DNS`](../config_apis/dns-config-openshift-io-v1.xml#dns-config-openshift-io-v1) schema |             |

Body parameters

| HTTP code          | Reponse body                                                                             |
|--------------------|------------------------------------------------------------------------------------------|
| 200 - OK           | [`DNS`](../config_apis/dns-config-openshift-io-v1.xml#dns-config-openshift-io-v1) schema |
| 201 - Created      | [`DNS`](../config_apis/dns-config-openshift-io-v1.xml#dns-config-openshift-io-v1) schema |
| 401 - Unauthorized | Empty                                                                                    |

HTTP responses
